# sippet

./: .gitignore  404.html  BUILD.gn  DEPS  README.md  _config.yml  android-build-instructions.md  build-instructions-ios.md  how-to-compile.md  index.html  index.md  ios-build-instructions.md  params.json  setup_links.py  sitemap.xml  using-fluent-sip-messages.md  using-the-js-shell.md
sippet/: BUILD.gn  all.gyp  client_transaction.cc  client_transaction.h  core.cc  core.h  server_transaction.cc  server_transaction.h  sippet.gyp  sippet_examples.gyp  sippet_export.h  sippet_phone.gyp  sippet_tests.gyp  transaction_config.cc  transaction_config.h  transaction_factory.h  transaction_layer.cc  transaction_layer.h  transaction_layer_core.cc  transaction_layer_core.h  transaction_layer_core_unittest.cc  transaction_layer_factory.h  transaction_layer_impl.cc  transaction_layer_impl.h  transaction_layer_unittest.cc  transport_layer.cc  transport_layer.h
sippet/base/: casting.h  format.h  ilist.h  random_strings.cc  random_strings.h  raw_ostream.cc  raw_ostream.h  sequences.h  stl_extras.h  string_extras.h  tags.cc  tags.h  thread_util.h  type_traits.h  user_agent_utils.cc  user_agent_utils.h  user_agent_utils_ios.mm  version.cc  version.h
sippet/examples/android/: settings.gradle
sippet/examples/call/: call_main.cc
sippet/examples/common/: dump_ssl_cert_error.cc  dump_ssl_cert_error.h  static_password_handler.cc  static_password_handler.h  url_request_context_getter.cc  url_request_context_getter.h
sippet/examples/login/: login_main.cc  url_request_context_getter.cc  url_request_context_getter.h
sippet/examples/program_main/: program_main.cc  program_main.h
sippet/message/: atom.h  header.cc  header.h  header_list.h  headers.cc  headers.h  headers_unittest.cc  known_headers.h  known_methods.h  known_protocols.h  known_statuses.h  message.cc  message.h  message_unittest.cc  method.cc  method.h  method_list.h  parser_unittest.cc  protocol.cc  protocol.h  protocol_list.h  request.cc  request.h  response.cc  response.h  sip_util.cc  sip_util.h  sip_version.h  status.cc  status.h  status_code.cc  status_code.h  status_code_list.h  version.h
sippet/message/headers/: accept.cc  accept.h  accept_encoding.cc  accept_encoding.h  accept_language.cc  accept_language.h  alert_info.cc  alert_info.h  allow.cc  allow.h  authentication_info.cc  authentication_info.h  authorization.cc  authorization.h  call_id.cc  call_id.h  call_info.cc  call_info.h  contact.cc  contact.h  content_disposition.cc  content_disposition.h  content_encoding.cc  content_encoding.h  content_language.cc  content_language.h  content_length.cc  content_length.h  content_type.cc  content_type.h  cseq.cc  cseq.h  date.cc  date.h  error_info.cc  error_info.h  expires.cc  expires.h  from.cc  from.h  (+55 more)
sippet/message/parser/: parser.cc  tokenizer.cc  tokenizer.h
sippet/phone/: README.sippet  call.cc  call.h  call_direction.h  call_impl.cc  call_impl.h  call_js_wrapper.cc  call_js_wrapper.h  call_state.h  completion_status.cc  completion_status.h  completion_status_list.h  ice_server.cc  ice_server.h  js_function_call.h  phone.cc  phone.h  phone_impl.cc  phone_impl.h  phone_js_main.cc  phone_js_wrapper.cc  phone_js_wrapper.h  phone_state.h  q850.h  settings.cc  settings.h
sippet/phone/android/: entry_point.cc  java_call.cc  java_call.h  java_phone.cc  java_phone.h  java_settings.cc  java_settings.h  jni_helpers.cc  jni_helpers.h  jni_onload.cc  jni_onload.h  jni_registrar.cc  jni_registrar.h  run_completion_callback.cc  run_completion_callback.h
sippet/phone/v8/: call_js_wrapper.cc  call_js_wrapper.h  js_callback.h  js_function_call.h  phone_js_main.cc  phone_js_wrapper.cc  phone_js_wrapper.h
sippet/test/embedded_test_server/: embedded_test_server.cc
sippet/test/standalone_test_server/: main.cc  standalone_test_server.cc  standalone_test_server.h  standalone_test_server_unittest.cc
sippet/transport/: aliases_map.cc  aliases_map.h  branch_factory.cc  branch_factory.h  channel.h  channel_base.cc  channel_base_unittest.cc  channel_factory.h  client_transaction.h  client_transaction_impl.cc  client_transaction_impl.h  connection.h  connection_factory.h  default_branch_factory.cc  default_branch_factory.h  default_time_delta_factory.cc  default_time_delta_factory.h  end_point.cc  end_point.h  end_point_unittest.cc  framed_write_stream_socket.cc  framed_write_stream_socket.h  framed_write_stream_socket_unittest.cc  network_layer.cc  network_layer.h  network_layer_delegate.h  network_layer_unittest.cc  network_settings.cc  network_settings.h  sequenced_write_stream_socket.cc  sequenced_write_stream_socket_unittest.cc  server_transaction.h  server_transaction_impl.cc  server_transaction_impl.h  ssl_cert_error_handler.h  ssl_cert_error_transaction.cc  ssl_cert_error_transaction.h  stream_channel.cc  stream_channel.h  stream_channel_unittest.cc  (+8 more)
sippet/transport/chrome/: chrome_channel_factory.cc  chrome_channel_factory.h  chrome_datagram_channel.cc  chrome_datagram_channel.h  chrome_datagram_reader.cc  chrome_datagram_reader.h  chrome_datagram_writer.cc  chrome_datagram_writer.h  chrome_datagram_writer_unittest.cc  chrome_stream_channel.cc  chrome_stream_channel.h  (+16 more)
sippet/ua/: auth.cc  auth.h  auth_cache.cc  auth_cache.h  auth_controller.cc  auth_controller.h  auth_controller_unittest.cc  auth_handler.cc  auth_handler.h  auth_handler_digest.cc  auth_handler_digest.h  auth_handler_digest_unittest.cc  auth_handler_factory.cc  auth_handler_factory.h  auth_handler_mock.cc  auth_handler_mock.h  auth_transaction.cc  auth_transaction.h  dialog.cc  dialog.h  dialog_controller.cc  dialog_controller.h  dialog_store.cc  dialog_store.h  password_handler.h  ssl_cert_error_handler.h  ssl_cert_error_transaction.cc  ssl_cert_error_transaction.h  ssl_certificate_error_handler.h  ua_user_agent.cc  ua_user_agent.h  user_agent.cc  user_agent.h
sippet/uri/: uri.cc  uri.h  uri_canon.cc  uri_canon.h  uri_canon_internal.cc  uri_canon_internal.h  uri_parse.cc  uri_parse.h  uri_parse_internal.h  uri_unittest.cc  uri_util.cc  uri_util.h
(+437 files in other folders)
